--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.18.3",
     "concurrently": "^4.0.1",
     "convert-excel-to-json": "^1.4.1",
+    "cors": "^2.8.4",
     "express": "^4.16.4",
     "nodemon": "^1.18.5"
   }
